@@ -1,0 +1,5 @@
+<!doctype html>
+<html>
+<head><title>Welcome</title></head>
+<body>Welcome</body>
+</html>
